# fastapi_example_project

./: .envrc  README.md  pyproject.toml  tbump.toml
.github/workflows/: do_release.yml  ping_webhook.yml
egservice/: __init__.py  config.py  log_middleware.py  main.py  webhook.py
egservice/models/: webhook.py
egservice/static/: style.css
egservice/templates/: index.html
